# plexdb

./: Cargo.toml  README.md
src/: cli.rs  error.rs  lib.rs  main.rs  storage_engine.rs
src/cache/: block_cache.rs  bloom_filter.rs  compressed_cache.rs  lru_cache.rs  mod.rs
src/engine/: file.rs  file_storage.rs  mod.rs  partition_manager.rs  plex_engine.rs
src/storage/: file_manager.rs  wal.rs
src/utils/: compression.rs
