[package]
name = "kaydb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0.98"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.6"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
